syntax = "proto3";
package jetstream;

service GenericCommunication {
    // Each worker subscribes to updates from each other worker
    // By sending an ExchangeSubscribe message. In turn it will receive
    // an unbounded stream of ExchangeMessages
    rpc GenericExchange(ExchangeSubscribe) returns (stream ExchangeMessage) {}
}

message ExchangeSubscribe {
    uint64 worker_id = 1;
}

message ExchangeMessage {
    uint64 operator_id = 1;
    bytes data = 2;
}