syntax = "proto3";
package jetstream.snapshot;

service Snapshot {
    rpc LoadSnapshot(LoadSnapshotRequest) returns (LoadSnapshotResponse) {}
    rpc StartSnapshot(StartSnapshotRequest) returns (StartSnapshotResponse) {}
    rpc CommitSnapshot(CommitSnapshotRequest) returns (CommitSnapshotResponse) {}
}

message LoadSnapshotRequest {
    uint64 snapshot_epoch = 1;
}
message LoadSnapshotResponse {}

message StartSnapshotRequest {
    uint64 snapshot_epoch = 1;
}
message StartSnapshotResponse {}

message CommitSnapshotRequest {
    string from_name = 1;
    uint64 snapshot_epoch = 2;
}
message CommitSnapshotResponse {}
